# Final_Graficas

./: .gitignore  CMakeLists.txt  Cubo.cpp  Cubo.h  Makefile  RubikCube.cpp  Rubik_Cube_Solver.pro  color_calibration.txt  constans.h  cqtopencvviewergl.h  cubo.cpp  cvplayer.cpp  cvvideowidget.h  hsvcolorrange.cpp  hsvcolorrange.h  main.cpp  main_gl.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglcontext.cpp  openglcontext.h  pyhelper.h  rubikpreview.cpp  rubikpreview.h  rubiks.py  rubikscanner.cpp  rubikscanner.h  rubiksolveralgorithms.cpp  rubiksolveralgorithms.h  solverwindow.cpp  solverwindow.h  solverwindow.ui  ui_mainwindow.h
